{{$NEXT}}

0.36   2019-11-26

- Fix somewhat broken HTML parsing. The change in 0.35 caused the parser to
  die if it encountered an empty attribute like in `<button
  ... disabled>`. This broke Markdown::Pod. Fixes
  https://github.com/keedi/Markdown-Pod/issues/13. Reported by Slaven Rezić.


0.35   2019-11-09

- Fix entirely broken HTML attribute parsing. Any attribute with a space in
  its value like `alt="Some text"` would cause the parser to go
  haywire. Reported by Shlomi Fish. GH #21.


0.34   2019-03-30

- When Markdent processes raw HTML in Markdown text it will now emit that HTML
  with its attributes in sorted order, so `<a rel="thing" href="foo">` becomes
  `<a href="foo" rel="thing">`. Previously the attributes were emitted in a
  random order. Sorting them ensures that the same source text always renders
  the same way. Patch by Shlomi Fish. GH #19.


0.33   2019-01-18

- Replace use of Digest::SHA1 with Digest::SHA. The latter is core since 5.9.3
  so it's one less dependency. Requested by Jonas Smedegaard. GH #17.


0.32   2018-10-20

- Added more documentation to Markdent.pm containing pointers to various
  classes in the distribution. Also added POD documentation to the
  markdent-html script that ships with this distro.


0.31   2018-06-09

- Moved from rt.cpan.org to GitHub issues.


0.30   2018-02-18

- Require Perl 5.10. Perl 5.8.x has very weird parsing failures on valid Perl
  code in this distribution.

- Specify required versions of Params::ValidationCompiler and Test2::V0. This
  module does not work with just any versions of those two. Fixed by Denis
  Ibaev. GitHub #11.


0.29   2017-12-31

- Make the GitHub dialect look for fenced code blocks before other types of
  markup. Otherwise this could parse the _inside_ of a fenced code block as
  containing some sort of block-level markup like a two-line list. Reported by
  Frew Schmidt. GitHub #10.


0.28   2017-11-21

- Require Moose 2.1802 for full compatibility with Specio.

